  EntityRepository.EntityInfo created
  EntityRepository refactored, transient fields removed, temporarily?
  Package framework.model renamed to framework.domain
  EntityRepository.get() removed, no longer singleton, all methods static
  IEntityDbRemoteServer.connect() now takes a map instead of a EntityRepository parameter
  EntityRepository.EntityInfo renamed to EntityDefinition, refactored
  EntityRepository.getOrderByColumnNames renamed to getOrderByClause
  EntityKey.propertyCount, singleIntegerKey fields removed
  Util.notNull() added along with test method in UtilTest
  Util.sqlEscapeString() moved to EntityDbUtil
  IEntityDb.set/isCheckDependencies() removed
  EntityTableModel.filterQueryByMaster field, setter and getter renamed to queryFilteredByMaster
  IEntityDb.startTransaction() renamed to beginTransaction
  EntityModel.initializeEntityComboBoxModels return value changed from Map<Property, ComboBoxModel> to Map<Property.ForeignKeyProperty, EntityComboBoxModel>
  EntityModel.containsTableModel() added
  EntityModel.useStrictEditing renamed to useSelectForUpdate
  EntityModel.stSelectionFiltersDetail State field changed to boolean selectionFiltersDetail
  EntityModel.refreshEntityComboBoxModels() removed
  Configuration.USE_STRICT_EDIT_MODE renamed to USE_SELECT_FOR_UPDATE
  Demo package model renamed to domain
  private List<Entity> selectMany(final List<Property> properties, final List<EntityKey> primaryKeys) removed from EntityDbConnection
  EntityCriteria.isKeyCriteria() removed
  EntityRepository.EntityDefinition.entitySelectString renamed to selectColumnsString
  EntityRepository.entityInfo renamed to entityDefinitions
  EntityDbUtil.* moved to EntityUtil, EntitDbUtil removed, it introduced a dependency cycle between db.criteria and db
  EntityDbConnection, StringBuilder used throughout
  EntityDbConnection.set/getPoolTime() made package protected
  FrameworkUiUtil.createDateInputField() removed, unused