@@ -25,7 +25,7 @@ public class DerbyDatabase implements IDatabase {
 
   /** {@inheritDoc} */
   public String getDatabaseType() {
-    return DATABASE_TYPE_DERBY;
+    return DERBY;
   }
 
   /** {@inheritDoc} */
